--- a/public/style.css
+++ b/public/style.css
@@ -3,27 +3,29 @@
 }
 
 body {
-  font-family:sans-serif;
-  margin: 25px;
+  font-family:'Inter';
+  margin: 25px auto;
   color: #222;
   background-color: #f5f5f5;
+  text-align: center;
 }
 
 h1 {
   font-weight: bold;
-  
+  margin: 3rem auto 2rem;
 }
-
-p {
-  max-width: 900px;
+#forms {
+  display: flex;
+  height: auto;
+  align-items: center;
+  flex-direction: column;
 }
-
 form {
   margin-bottom: 25px;
   padding: 15px;
-  background-color: #87D37C;
-  display: inline-block;
+  background-color: #9e9e9e;
   width: 100%;
+  height: 100%;
   max-width: 340px;
   border-radius: 5px;
 }
@@ -50,10 +52,13 @@ input[type=submit] {
 input[type=submit]:hover {
   background-color: #FFFEC4;
 }
-
+.container {
+  width: 100%;
+  margin: auto;
+}
 code {
-  font-family: monospace;
-  font-size: 1.2em;
-  background-color: #FFFEC4;
-  padding: 2px;
+  font-family: 'JetBrains Mono';
+  background-color: #ffffff;
+  border-radius: 5px;
+  padding: 3px;
 }
