--- a/views/index.html
+++ b/views/index.html
@@ -3,34 +3,42 @@
   <head>
     <title>Exercise Tracker | freeCodeCamp</title>
     <link rel="shortcut icon" href="https://cdn.freecodecamp.org/universal/favicons/favicon.ico"  type="image/x-icon" />
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css" />
     <link href="style.css" rel="stylesheet" type="text/css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
   </head>
 
   <body>
     <div class="container">
       <h1>Exercise tracker</h1>
-      <form action="/api/users" method="post">
-        <h2>Create a New User</h2>
-        <p><code>POST /api/users</code></p>
-        <input id="uname" type="text" name="username" placeholder="username" />
-        <input type="submit" value="Submit" />
-      </form>
-      <form action="/api/users/:_id/exercises" id="exercise-form" method="post">
-        <h2>Add exercises</h2>
-        <p><code>POST /api/users/:_id/exercises</code></p>
-        <input id="uid" type="text" name=":_id" placeholder=":_id" />
-        <input id="desc" type="text" name="description" placeholder="description*" />
-        <input id="dur" type="text" name="duration" placeholder="duration* (mins.)" />
-        <input id="date" type="text" name="date" placeholder="date (yyyy-mm-dd)" />
-        <input type="submit" value="Submit" />
-      </form>
+      <div id="forms">
+        <form action="/api/users" method="post">
+          <h2>Create a New User</h2>
+          <p><code>POST /api/users</code></p>
+          <input id="uname" type="text" name="username" placeholder="username" />
+          <input type="submit" value="Submit" />
+        </form>
+        <form action="/api/users/:_id/exercises" id="exercise-form" method="post">
+          <h2>Add exercises</h2>
+          <p><code>POST /api/users/:_id/exercises</code></p>
+          <input id="uid" type="text" name=":_id" placeholder=":_id" required />
+          <input id="desc" type="text" name="description" placeholder="description*" required />
+          <input id="dur" type="text" name="duration" placeholder="duration* (mins.)" required />
+          <input id="date" type="date" name="date" placeholder="date (yyyy-mm-dd)" />
+          <input type="submit" value="Submit" />
+        </form>
+      </div>
       <p>
         <strong>GET user's exercise log: </strong>
         <code>GET /api/users/:_id/logs?[from][&amp;to][&amp;limit]</code>
       </p>
       <p><strong>[ ]</strong> = optional</p>
       <p><strong>from, to</strong> = dates (yyyy-mm-dd); <strong>limit</strong> = number</p>
+      <p>
+        <strong>Example:</strong>
+        <code>GET /api/users/12345/logs?from=2020-03-01&to=2024-08-01&limit=7</code>
+      </p>
     </div>
     <script>
       const exerciseForm = document.getElementById("exercise-form");
